--- a/sound/soc/bcm/Kconfig
+++ b/sound/soc/bcm/Kconfig
@@ -96,6 +96,6 @@ config SND_AUDIOINJECTOR_PI_SOUNDCARD
 config SND_BCM2708_SOC_DIONAUDIO_LOCO
         tristate "Support for Dion Audio LOCO DAC-AMP"
         depends on SND_BCM2708_SOC_I2S || SND_BCM2835_SOC_I2S
-        select SND_SOC_PCM512x
+        select SND_SOC_PCM5102a
         help
          Say Y or M if you want to add support Dion Audio LOCO.
