--- a/drivers/staging/media/platform/bcm2835/Kconfig
+++ b/drivers/staging/media/platform/bcm2835/Kconfig
@@ -1,9 +1,10 @@
 config VIDEO_BCM2835
-	tristate "Broadcom BCM2835 camera driver"
+	tristate "BCM2835 Camera"
+	depends on MEDIA_SUPPORT
 	depends on VIDEO_V4L2 && (ARCH_BCM2835 || COMPILE_TEST)
-	depends on BCM2835_VCHIQ
-	depends on ARM
+	select BCM2835_VCHIQ
 	select VIDEOBUF2_VMALLOC
+	select BTREE
 	help
 	  Say Y here to enable camera host interface devices for
 	  Broadcom BCM2835 SoC. This operates over the VCHIQ interface
