overlays: Added overlay for Seeed Studio reTerminal carrier board
This allows using reTerminal carrier board built-in sensors
and LCD display/touch screen.

Seeed Studio reTerminal is a Human-Machine Interface (HMI) carrier board
for Raspberry Pi 4 CM with 5-inch LCD screen, accelerometer,
light sensor, GPIO buttons and user LEDs. reTerminal can easily and
efficiently work with IoT and cloud systems to unlock endless scenarios
at the edge.

Signed-off-by: Maslov Dmitry  <maslovdmitry@seeed.cc>

--- a/arch/arm/boot/dts/overlays/Makefile
+++ b/arch/arm/boot/dts/overlays/Makefile
@@ -184,6 +184,7 @@ dtbo-$(CONFIG_ARCH_BCM2835) += \
 	sdio.dtbo \
 	seeed-can-fd-hat-v1.dtbo \
 	seeed-can-fd-hat-v2.dtbo \
+	seeed-reterminal-core.dtbo \
 	sh1106-spi.dtbo \
 	si446x-spi0.dtbo \
 	smi.dtbo \
