configs: enabled building LIS331DLH as module
Enabled building LIS331DLH drivers as module, used in
Seeed Studio reTerminal carrier board for Raspberry Pi CM 4.

Signed-off-by: Maslov Dmitry  <maslovdmitry@seeed.cc>

--- a/arch/arm/configs/bcm2711_defconfig
+++ b/arch/arm/configs/bcm2711_defconfig
@@ -742,6 +742,7 @@ CONFIG_SENSORS_DS1621=m
 CONFIG_SENSORS_GPIO_FAN=m
 CONFIG_SENSORS_IIO_HWMON=m
 CONFIG_SENSORS_JC42=m
+CONFIG_SENSORS_LIS3_I2C=m
 CONFIG_SENSORS_LM75=m
 CONFIG_SENSORS_RASPBERRYPI_HWMON=m
 CONFIG_SENSORS_RPI_POE_FAN=m
